<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Quiz</string>
    <string name="button_text">Done!</string>
    <string name="city_amsterdam">Amsterdam</string>
    <string name="city_andorra">Andorra</string>
    <string name="city_ankara">Ankara</string>
    <string name="city_astana">Astana</string>
    <string name="city_athens">Athens</string>
    <string name="city_baku">Baku</string>
    <string name="city_belgrade">Belgrade</string>
    <string name="city_berlin">Berlin</string>
    <string name="city_bern">Bern</string>
    <string name="city_bratislava">Bratislava</string>
    <string name="city_brussels">Brussels</string>
    <string name="city_bucharest">Bucharest</string>
    <string name="city_budapest">Budapest</string>
    <string name="city_chisnau">Chisnau</string>
    <string name="city_copenhagen">Copenhagen</string>
    <string name="city_dublin">Dublin</string>
    <string name="city_heksinki">Helsinki</string>
    <string name="city_kiev">Kiev</string>
    <string name="city_lisbon">Lisbon</string>
    <string name="city_ljubljana">Ljubljana</string>
    <string name="city_london">London</string>
    <string name="city_madrid">Madrid</string>
    <string name="city_minsk">Minsk</string>
    <string name="city_monaco">Monaco</string>
    <string name="city_moscow">Moscow</string>
    <string name="city_nicosia">Nicosia</string>
    <string name="city_oslo">Oslo</string>
    <string name="city_paris">Paris</string>
    <string name="city_podgorica">Podgorica</string>
    <string name="city_prague">Prague</string>
    <string name="city_reykjavik">Reikjavik</string>
    <string name="city_riga">Riga</string>
    <string name="city_rome">Rome</string>
    <string name="city_san_marino">San Marino</string>
    <string name="city_sarajevo">Sarajevo</string>
    <string name="city_skopje">Skopje</string>
    <string name="city_sofia">Sofia</string>
    <string name="city_stockholm">Stockholm</string>
    <string name="city_tallin">Tallin</string>
    <string name="city_tbilisi">Tbilisi</string>
    <string name="city_tirana">Tirana</string>
    <string name="city_vaduz">Vaduz</string>
    <string name="city_valletta">Valleta</string>
    <string name="city_vatican">Vatican City</string>
    <string name="city_vienna">Vienna</string>
    <string name="city_vilnius">Vilnius</string>
    <string name="city_warsaw">Warsaw</string>
    <string name="city_yerevan">Yerevan</string>
    <string name="city_zagreb">Zagreb</string>
    <string name="congratulations">Congratulations!! You answered %s questions correctly!</string>
    <string name="country_denmark">Denmark</string>
    <string name="country_england">England</string>
    <string name="country_france">France</string>
    <string name="country_greece">Greece</string>
    <string name="country_hungary">Hungary</string>
    <string name="country_italy">Italy</string>
    <string name="country_portugal">Portugal</string>
    <string name="country_spain">Spain</string>
    <string name="country_sweden">Sweden</string>
    <string name="country_switzerland">Switzerland</string>
    <string name="country_turkey">Turkey</string>
    <string name="introduction">In this quizz you should match the countries with their capitals. Easy, right?</string>
    <string name="report_button_text">Send report</string>
    <string name="title">Welcome to My Quiz!!</string>
    <string name="try_again">Sorry, you got %s right answers. Please, try again</string>
    <string name="try_again_button_text">Try again</string>
    <string name="email_message">Hey look! I just scored %s in My Quizz!!</string>
    <string name="email_subject">My Quizz results</string>
    <string name="get_email">Please set your email</string>
    <string name="email_hint" translatable="false">johndoe@example.com</string>
    <string name="add_to_users_database">Add my user to the database</string>
    <string name="personal_info">Personal info</string>
    <string name="user_added_to_database">\nYour user will be added to our database</string>
    <string name="verify">I have finished my quizz</string>
    <string name="signature">Please, enter your name so we can verify that you are not a robot</string>
    <string name="signature_hint">John Doe</string>
    <string name="verification_expected">Please, check the verification checkbox</string>
    <string name="signature_expected">Please, sign your quizz</string>
    <string name="capital_spain_question">Which of this cities was capital of Spain?</string>
    <string name="city_barcelona">Barcelona</string>
    <string name="city_toledo">Toledo</string>
    <string name="capital_japan_question">Write the capital of Japan</string>
    <string name="city_tokio" translatable="false">Tokio</string>

</resources>